projekt/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> body AMERICA_GREAT
Rule 2     program -> AMERICA_GREAT
Rule 3     body -> statement
Rule 4     body -> body statement
Rule 5     statement -> assignment
Rule 6     statement -> print_statement
Rule 7     statement -> if_statement
Rule 8     statement -> loop_statement
Rule 9     statement -> BREAK
Rule 10    assignment -> ID ASSIGN_OP_SIGN expression
Rule 11    assignment -> ID ASSIGN_OP_WORD expression
Rule 12    assignment -> MAKE ID expression
Rule 13    print_statement -> PRINT expression
Rule 14    if_statement -> IF expression LBRACE body RBRACE
Rule 15    if_statement -> IF expression LBRACE body RBRACE ELSE LBRACE body RBRACE
Rule 16    if_statement -> IF expression LBRACE body RBRACE ELSE if_statement
Rule 17    loop_statement -> AS_LONG_AS expression LBRACE body RBRACE
Rule 18    expression -> expression PLUS expression
Rule 19    expression -> expression MINUS expression
Rule 20    expression -> expression TIMES expression
Rule 21    expression -> expression OVER expression
Rule 22    expression -> expression AND expression
Rule 23    expression -> expression OR expression
Rule 24    expression -> expression EQ expression
Rule 25    expression -> expression GE expression
Rule 26    expression -> expression LE expression
Rule 27    expression -> expression GT expression
Rule 28    expression -> expression LT expression
Rule 29    expression -> expression ASSIGN_OP_WORD expression
Rule 30    expression -> NOT expression
Rule 31    expression -> expression QUESTION
Rule 32    expression -> LPAREN expression RPAREN
Rule 33    expression -> NUMBER
Rule 34    expression -> STRING
Rule 35    expression -> ID
Rule 36    expression -> FACT
Rule 37    expression -> LIE

Terminals, with rules where they appear

AMERICA_GREAT        : 1 2
AND                  : 22
ASSIGN_OP_SIGN       : 10
ASSIGN_OP_WORD       : 11 29
AS_LONG_AS           : 17
BREAK                : 9
ELSE                 : 15 16
EQ                   : 24
FACT                 : 36
GE                   : 25
GT                   : 27
ID                   : 10 11 12 35
IF                   : 14 15 16
LBRACE               : 14 15 15 16 17
LE                   : 26
LIE                  : 37
LPAREN               : 32
LT                   : 28
MAKE                 : 12
MINUS                : 19
NOT                  : 30
NUMBER               : 33
OR                   : 23
OVER                 : 21
PLUS                 : 18
PRINT                : 13
QUESTION             : 31
RBRACE               : 14 15 15 16 17
RPAREN               : 32
STRING               : 34
TIMES                : 20
error                : 

Nonterminals, with rules where they appear

assignment           : 5
body                 : 1 4 14 15 15 16 17
expression           : 10 11 12 13 14 15 16 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32
if_statement         : 7 16
loop_statement       : 8
print_statement      : 6
program              : 0
statement            : 3 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . body AMERICA_GREAT
    (2) program -> . AMERICA_GREAT
    (3) body -> . statement
    (4) body -> . body statement
    (5) statement -> . assignment
    (6) statement -> . print_statement
    (7) statement -> . if_statement
    (8) statement -> . loop_statement
    (9) statement -> . BREAK
    (10) assignment -> . ID ASSIGN_OP_SIGN expression
    (11) assignment -> . ID ASSIGN_OP_WORD expression
    (12) assignment -> . MAKE ID expression
    (13) print_statement -> . PRINT expression
    (14) if_statement -> . IF expression LBRACE body RBRACE
    (15) if_statement -> . IF expression LBRACE body RBRACE ELSE LBRACE body RBRACE
    (16) if_statement -> . IF expression LBRACE body RBRACE ELSE if_statement
    (17) loop_statement -> . AS_LONG_AS expression LBRACE body RBRACE

    AMERICA_GREAT   shift and go to state 3
    BREAK           shift and go to state 9
    ID              shift and go to state 10
    MAKE            shift and go to state 11
    PRINT           shift and go to state 12
    IF              shift and go to state 13
    AS_LONG_AS      shift and go to state 14

    program                        shift and go to state 1
    body                           shift and go to state 2
    statement                      shift and go to state 4
    assignment                     shift and go to state 5
    print_statement                shift and go to state 6
    if_statement                   shift and go to state 7
    loop_statement                 shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> body . AMERICA_GREAT
    (4) body -> body . statement
    (5) statement -> . assignment
    (6) statement -> . print_statement
    (7) statement -> . if_statement
    (8) statement -> . loop_statement
    (9) statement -> . BREAK
    (10) assignment -> . ID ASSIGN_OP_SIGN expression
    (11) assignment -> . ID ASSIGN_OP_WORD expression
    (12) assignment -> . MAKE ID expression
    (13) print_statement -> . PRINT expression
    (14) if_statement -> . IF expression LBRACE body RBRACE
    (15) if_statement -> . IF expression LBRACE body RBRACE ELSE LBRACE body RBRACE
    (16) if_statement -> . IF expression LBRACE body RBRACE ELSE if_statement
    (17) loop_statement -> . AS_LONG_AS expression LBRACE body RBRACE

    AMERICA_GREAT   shift and go to state 15
    BREAK           shift and go to state 9
    ID              shift and go to state 10
    MAKE            shift and go to state 11
    PRINT           shift and go to state 12
    IF              shift and go to state 13
    AS_LONG_AS      shift and go to state 14

    statement                      shift and go to state 16
    assignment                     shift and go to state 5
    print_statement                shift and go to state 6
    if_statement                   shift and go to state 7
    loop_statement                 shift and go to state 8

state 3

    (2) program -> AMERICA_GREAT .

    $end            reduce using rule 2 (program -> AMERICA_GREAT .)


state 4

    (3) body -> statement .

    AMERICA_GREAT   reduce using rule 3 (body -> statement .)
    BREAK           reduce using rule 3 (body -> statement .)
    ID              reduce using rule 3 (body -> statement .)
    MAKE            reduce using rule 3 (body -> statement .)
    PRINT           reduce using rule 3 (body -> statement .)
    IF              reduce using rule 3 (body -> statement .)
    AS_LONG_AS      reduce using rule 3 (body -> statement .)
    RBRACE          reduce using rule 3 (body -> statement .)


state 5

    (5) statement -> assignment .

    AMERICA_GREAT   reduce using rule 5 (statement -> assignment .)
    BREAK           reduce using rule 5 (statement -> assignment .)
    ID              reduce using rule 5 (statement -> assignment .)
    MAKE            reduce using rule 5 (statement -> assignment .)
    PRINT           reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    AS_LONG_AS      reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> print_statement .

    AMERICA_GREAT   reduce using rule 6 (statement -> print_statement .)
    BREAK           reduce using rule 6 (statement -> print_statement .)
    ID              reduce using rule 6 (statement -> print_statement .)
    MAKE            reduce using rule 6 (statement -> print_statement .)
    PRINT           reduce using rule 6 (statement -> print_statement .)
    IF              reduce using rule 6 (statement -> print_statement .)
    AS_LONG_AS      reduce using rule 6 (statement -> print_statement .)
    RBRACE          reduce using rule 6 (statement -> print_statement .)


state 7

    (7) statement -> if_statement .

    AMERICA_GREAT   reduce using rule 7 (statement -> if_statement .)
    BREAK           reduce using rule 7 (statement -> if_statement .)
    ID              reduce using rule 7 (statement -> if_statement .)
    MAKE            reduce using rule 7 (statement -> if_statement .)
    PRINT           reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    AS_LONG_AS      reduce using rule 7 (statement -> if_statement .)
    RBRACE          reduce using rule 7 (statement -> if_statement .)


state 8

    (8) statement -> loop_statement .

    AMERICA_GREAT   reduce using rule 8 (statement -> loop_statement .)
    BREAK           reduce using rule 8 (statement -> loop_statement .)
    ID              reduce using rule 8 (statement -> loop_statement .)
    MAKE            reduce using rule 8 (statement -> loop_statement .)
    PRINT           reduce using rule 8 (statement -> loop_statement .)
    IF              reduce using rule 8 (statement -> loop_statement .)
    AS_LONG_AS      reduce using rule 8 (statement -> loop_statement .)
    RBRACE          reduce using rule 8 (statement -> loop_statement .)


state 9

    (9) statement -> BREAK .

    AMERICA_GREAT   reduce using rule 9 (statement -> BREAK .)
    BREAK           reduce using rule 9 (statement -> BREAK .)
    ID              reduce using rule 9 (statement -> BREAK .)
    MAKE            reduce using rule 9 (statement -> BREAK .)
    PRINT           reduce using rule 9 (statement -> BREAK .)
    IF              reduce using rule 9 (statement -> BREAK .)
    AS_LONG_AS      reduce using rule 9 (statement -> BREAK .)
    RBRACE          reduce using rule 9 (statement -> BREAK .)


state 10

    (10) assignment -> ID . ASSIGN_OP_SIGN expression
    (11) assignment -> ID . ASSIGN_OP_WORD expression

    ASSIGN_OP_SIGN  shift and go to state 17
    ASSIGN_OP_WORD  shift and go to state 18


state 11

    (12) assignment -> MAKE . ID expression

    ID              shift and go to state 19


state 12

    (13) print_statement -> PRINT . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression OVER expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression ASSIGN_OP_WORD expression
    (30) expression -> . NOT expression
    (31) expression -> . expression QUESTION
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . ID
    (36) expression -> . FACT
    (37) expression -> . LIE

    NOT             shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    ID              shift and go to state 25
    FACT            shift and go to state 26
    LIE             shift and go to state 27

    expression                     shift and go to state 20

state 13

    (14) if_statement -> IF . expression LBRACE body RBRACE
    (15) if_statement -> IF . expression LBRACE body RBRACE ELSE LBRACE body RBRACE
    (16) if_statement -> IF . expression LBRACE body RBRACE ELSE if_statement
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression OVER expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression ASSIGN_OP_WORD expression
    (30) expression -> . NOT expression
    (31) expression -> . expression QUESTION
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . ID
    (36) expression -> . FACT
    (37) expression -> . LIE

    NOT             shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    ID              shift and go to state 25
    FACT            shift and go to state 26
    LIE             shift and go to state 27

    expression                     shift and go to state 28

state 14

    (17) loop_statement -> AS_LONG_AS . expression LBRACE body RBRACE
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression OVER expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression ASSIGN_OP_WORD expression
    (30) expression -> . NOT expression
    (31) expression -> . expression QUESTION
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . ID
    (36) expression -> . FACT
    (37) expression -> . LIE

    NOT             shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    ID              shift and go to state 25
    FACT            shift and go to state 26
    LIE             shift and go to state 27

    expression                     shift and go to state 29

state 15

    (1) program -> body AMERICA_GREAT .

    $end            reduce using rule 1 (program -> body AMERICA_GREAT .)


state 16

    (4) body -> body statement .

    AMERICA_GREAT   reduce using rule 4 (body -> body statement .)
    BREAK           reduce using rule 4 (body -> body statement .)
    ID              reduce using rule 4 (body -> body statement .)
    MAKE            reduce using rule 4 (body -> body statement .)
    PRINT           reduce using rule 4 (body -> body statement .)
    IF              reduce using rule 4 (body -> body statement .)
    AS_LONG_AS      reduce using rule 4 (body -> body statement .)
    RBRACE          reduce using rule 4 (body -> body statement .)


state 17

    (10) assignment -> ID ASSIGN_OP_SIGN . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression OVER expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression ASSIGN_OP_WORD expression
    (30) expression -> . NOT expression
    (31) expression -> . expression QUESTION
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . ID
    (36) expression -> . FACT
    (37) expression -> . LIE

    NOT             shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    ID              shift and go to state 25
    FACT            shift and go to state 26
    LIE             shift and go to state 27

    expression                     shift and go to state 30

state 18

    (11) assignment -> ID ASSIGN_OP_WORD . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression OVER expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression ASSIGN_OP_WORD expression
    (30) expression -> . NOT expression
    (31) expression -> . expression QUESTION
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . ID
    (36) expression -> . FACT
    (37) expression -> . LIE

    NOT             shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    ID              shift and go to state 25
    FACT            shift and go to state 26
    LIE             shift and go to state 27

    expression                     shift and go to state 31

state 19

    (12) assignment -> MAKE ID . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression OVER expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression ASSIGN_OP_WORD expression
    (30) expression -> . NOT expression
    (31) expression -> . expression QUESTION
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . ID
    (36) expression -> . FACT
    (37) expression -> . LIE

    NOT             shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    ID              shift and go to state 25
    FACT            shift and go to state 26
    LIE             shift and go to state 27

    expression                     shift and go to state 32

state 20

    (13) print_statement -> PRINT expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . OVER expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . GE expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . LT expression
    (29) expression -> expression . ASSIGN_OP_WORD expression
    (31) expression -> expression . QUESTION

    AMERICA_GREAT   reduce using rule 13 (print_statement -> PRINT expression .)
    BREAK           reduce using rule 13 (print_statement -> PRINT expression .)
    ID              reduce using rule 13 (print_statement -> PRINT expression .)
    MAKE            reduce using rule 13 (print_statement -> PRINT expression .)
    PRINT           reduce using rule 13 (print_statement -> PRINT expression .)
    IF              reduce using rule 13 (print_statement -> PRINT expression .)
    AS_LONG_AS      reduce using rule 13 (print_statement -> PRINT expression .)
    RBRACE          reduce using rule 13 (print_statement -> PRINT expression .)
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    OVER            shift and go to state 36
    AND             shift and go to state 37
    OR              shift and go to state 38
    EQ              shift and go to state 39
    GE              shift and go to state 40
    LE              shift and go to state 41
    GT              shift and go to state 42
    LT              shift and go to state 43
    ASSIGN_OP_WORD  shift and go to state 44
    QUESTION        shift and go to state 45


state 21

    (30) expression -> NOT . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression OVER expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression ASSIGN_OP_WORD expression
    (30) expression -> . NOT expression
    (31) expression -> . expression QUESTION
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . ID
    (36) expression -> . FACT
    (37) expression -> . LIE

    NOT             shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    ID              shift and go to state 25
    FACT            shift and go to state 26
    LIE             shift and go to state 27

    expression                     shift and go to state 46

state 22

    (32) expression -> LPAREN . expression RPAREN
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression OVER expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression ASSIGN_OP_WORD expression
    (30) expression -> . NOT expression
    (31) expression -> . expression QUESTION
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . ID
    (36) expression -> . FACT
    (37) expression -> . LIE

    NOT             shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    ID              shift and go to state 25
    FACT            shift and go to state 26
    LIE             shift and go to state 27

    expression                     shift and go to state 47

state 23

    (33) expression -> NUMBER .

    PLUS            reduce using rule 33 (expression -> NUMBER .)
    MINUS           reduce using rule 33 (expression -> NUMBER .)
    TIMES           reduce using rule 33 (expression -> NUMBER .)
    OVER            reduce using rule 33 (expression -> NUMBER .)
    AND             reduce using rule 33 (expression -> NUMBER .)
    OR              reduce using rule 33 (expression -> NUMBER .)
    EQ              reduce using rule 33 (expression -> NUMBER .)
    GE              reduce using rule 33 (expression -> NUMBER .)
    LE              reduce using rule 33 (expression -> NUMBER .)
    GT              reduce using rule 33 (expression -> NUMBER .)
    LT              reduce using rule 33 (expression -> NUMBER .)
    ASSIGN_OP_WORD  reduce using rule 33 (expression -> NUMBER .)
    QUESTION        reduce using rule 33 (expression -> NUMBER .)
    AMERICA_GREAT   reduce using rule 33 (expression -> NUMBER .)
    BREAK           reduce using rule 33 (expression -> NUMBER .)
    ID              reduce using rule 33 (expression -> NUMBER .)
    MAKE            reduce using rule 33 (expression -> NUMBER .)
    PRINT           reduce using rule 33 (expression -> NUMBER .)
    IF              reduce using rule 33 (expression -> NUMBER .)
    AS_LONG_AS      reduce using rule 33 (expression -> NUMBER .)
    RBRACE          reduce using rule 33 (expression -> NUMBER .)
    LBRACE          reduce using rule 33 (expression -> NUMBER .)
    RPAREN          reduce using rule 33 (expression -> NUMBER .)


state 24

    (34) expression -> STRING .

    PLUS            reduce using rule 34 (expression -> STRING .)
    MINUS           reduce using rule 34 (expression -> STRING .)
    TIMES           reduce using rule 34 (expression -> STRING .)
    OVER            reduce using rule 34 (expression -> STRING .)
    AND             reduce using rule 34 (expression -> STRING .)
    OR              reduce using rule 34 (expression -> STRING .)
    EQ              reduce using rule 34 (expression -> STRING .)
    GE              reduce using rule 34 (expression -> STRING .)
    LE              reduce using rule 34 (expression -> STRING .)
    GT              reduce using rule 34 (expression -> STRING .)
    LT              reduce using rule 34 (expression -> STRING .)
    ASSIGN_OP_WORD  reduce using rule 34 (expression -> STRING .)
    QUESTION        reduce using rule 34 (expression -> STRING .)
    AMERICA_GREAT   reduce using rule 34 (expression -> STRING .)
    BREAK           reduce using rule 34 (expression -> STRING .)
    ID              reduce using rule 34 (expression -> STRING .)
    MAKE            reduce using rule 34 (expression -> STRING .)
    PRINT           reduce using rule 34 (expression -> STRING .)
    IF              reduce using rule 34 (expression -> STRING .)
    AS_LONG_AS      reduce using rule 34 (expression -> STRING .)
    RBRACE          reduce using rule 34 (expression -> STRING .)
    LBRACE          reduce using rule 34 (expression -> STRING .)
    RPAREN          reduce using rule 34 (expression -> STRING .)


state 25

    (35) expression -> ID .

    PLUS            reduce using rule 35 (expression -> ID .)
    MINUS           reduce using rule 35 (expression -> ID .)
    TIMES           reduce using rule 35 (expression -> ID .)
    OVER            reduce using rule 35 (expression -> ID .)
    AND             reduce using rule 35 (expression -> ID .)
    OR              reduce using rule 35 (expression -> ID .)
    EQ              reduce using rule 35 (expression -> ID .)
    GE              reduce using rule 35 (expression -> ID .)
    LE              reduce using rule 35 (expression -> ID .)
    GT              reduce using rule 35 (expression -> ID .)
    LT              reduce using rule 35 (expression -> ID .)
    ASSIGN_OP_WORD  reduce using rule 35 (expression -> ID .)
    QUESTION        reduce using rule 35 (expression -> ID .)
    AMERICA_GREAT   reduce using rule 35 (expression -> ID .)
    BREAK           reduce using rule 35 (expression -> ID .)
    ID              reduce using rule 35 (expression -> ID .)
    MAKE            reduce using rule 35 (expression -> ID .)
    PRINT           reduce using rule 35 (expression -> ID .)
    IF              reduce using rule 35 (expression -> ID .)
    AS_LONG_AS      reduce using rule 35 (expression -> ID .)
    RBRACE          reduce using rule 35 (expression -> ID .)
    LBRACE          reduce using rule 35 (expression -> ID .)
    RPAREN          reduce using rule 35 (expression -> ID .)


state 26

    (36) expression -> FACT .

    PLUS            reduce using rule 36 (expression -> FACT .)
    MINUS           reduce using rule 36 (expression -> FACT .)
    TIMES           reduce using rule 36 (expression -> FACT .)
    OVER            reduce using rule 36 (expression -> FACT .)
    AND             reduce using rule 36 (expression -> FACT .)
    OR              reduce using rule 36 (expression -> FACT .)
    EQ              reduce using rule 36 (expression -> FACT .)
    GE              reduce using rule 36 (expression -> FACT .)
    LE              reduce using rule 36 (expression -> FACT .)
    GT              reduce using rule 36 (expression -> FACT .)
    LT              reduce using rule 36 (expression -> FACT .)
    ASSIGN_OP_WORD  reduce using rule 36 (expression -> FACT .)
    QUESTION        reduce using rule 36 (expression -> FACT .)
    AMERICA_GREAT   reduce using rule 36 (expression -> FACT .)
    BREAK           reduce using rule 36 (expression -> FACT .)
    ID              reduce using rule 36 (expression -> FACT .)
    MAKE            reduce using rule 36 (expression -> FACT .)
    PRINT           reduce using rule 36 (expression -> FACT .)
    IF              reduce using rule 36 (expression -> FACT .)
    AS_LONG_AS      reduce using rule 36 (expression -> FACT .)
    RBRACE          reduce using rule 36 (expression -> FACT .)
    LBRACE          reduce using rule 36 (expression -> FACT .)
    RPAREN          reduce using rule 36 (expression -> FACT .)


state 27

    (37) expression -> LIE .

    PLUS            reduce using rule 37 (expression -> LIE .)
    MINUS           reduce using rule 37 (expression -> LIE .)
    TIMES           reduce using rule 37 (expression -> LIE .)
    OVER            reduce using rule 37 (expression -> LIE .)
    AND             reduce using rule 37 (expression -> LIE .)
    OR              reduce using rule 37 (expression -> LIE .)
    EQ              reduce using rule 37 (expression -> LIE .)
    GE              reduce using rule 37 (expression -> LIE .)
    LE              reduce using rule 37 (expression -> LIE .)
    GT              reduce using rule 37 (expression -> LIE .)
    LT              reduce using rule 37 (expression -> LIE .)
    ASSIGN_OP_WORD  reduce using rule 37 (expression -> LIE .)
    QUESTION        reduce using rule 37 (expression -> LIE .)
    AMERICA_GREAT   reduce using rule 37 (expression -> LIE .)
    BREAK           reduce using rule 37 (expression -> LIE .)
    ID              reduce using rule 37 (expression -> LIE .)
    MAKE            reduce using rule 37 (expression -> LIE .)
    PRINT           reduce using rule 37 (expression -> LIE .)
    IF              reduce using rule 37 (expression -> LIE .)
    AS_LONG_AS      reduce using rule 37 (expression -> LIE .)
    RBRACE          reduce using rule 37 (expression -> LIE .)
    LBRACE          reduce using rule 37 (expression -> LIE .)
    RPAREN          reduce using rule 37 (expression -> LIE .)


state 28

    (14) if_statement -> IF expression . LBRACE body RBRACE
    (15) if_statement -> IF expression . LBRACE body RBRACE ELSE LBRACE body RBRACE
    (16) if_statement -> IF expression . LBRACE body RBRACE ELSE if_statement
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . OVER expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . GE expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . LT expression
    (29) expression -> expression . ASSIGN_OP_WORD expression
    (31) expression -> expression . QUESTION

    LBRACE          shift and go to state 48
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    OVER            shift and go to state 36
    AND             shift and go to state 37
    OR              shift and go to state 38
    EQ              shift and go to state 39
    GE              shift and go to state 40
    LE              shift and go to state 41
    GT              shift and go to state 42
    LT              shift and go to state 43
    ASSIGN_OP_WORD  shift and go to state 44
    QUESTION        shift and go to state 45


state 29

    (17) loop_statement -> AS_LONG_AS expression . LBRACE body RBRACE
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . OVER expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . GE expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . LT expression
    (29) expression -> expression . ASSIGN_OP_WORD expression
    (31) expression -> expression . QUESTION

    LBRACE          shift and go to state 49
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    OVER            shift and go to state 36
    AND             shift and go to state 37
    OR              shift and go to state 38
    EQ              shift and go to state 39
    GE              shift and go to state 40
    LE              shift and go to state 41
    GT              shift and go to state 42
    LT              shift and go to state 43
    ASSIGN_OP_WORD  shift and go to state 44
    QUESTION        shift and go to state 45


state 30

    (10) assignment -> ID ASSIGN_OP_SIGN expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . OVER expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . GE expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . LT expression
    (29) expression -> expression . ASSIGN_OP_WORD expression
    (31) expression -> expression . QUESTION
